월간 연간보고서 논문보고 70%%이상이면 보여주게끔 코드수정